--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@
 title: Open Opportunity Data
 email: ross.dakin@pif.gov
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A collection of resources for developers of tools related to opportunity
+  mobility.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ood.pif.gov" # the base hostname & protocol for your site
 
