--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   mobility.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ood.pif.gov" # the base hostname & protocol for your site
+repo_url: https://github.com/presidential-innovation-fellows/open-opportunity-data
 
 # Build settings
 markdown: kramdown
