--- a/_data/personas/john.yml
+++ b/_data/personas/john.yml
@@ -1,5 +1,5 @@
 name: "John"
-gender: "m"
+gender: "male"
 overview: "John is optimistic, extraverted, and trust- ing of those in his community. He is a proud father of a 9-year-old girl and likes to talk about how he is setting up a savings account for her and teaching her about it. John is active in community groups, volunteering at food drives and with Autism Speaks."
 quotes:
   - "I got my daughter a savings account for New Years; I said, 'Baby, it is time to start saving'"
