--- a/_data/personas/karla.yml
+++ b/_data/personas/karla.yml
@@ -1,5 +1,5 @@
 name: "Karla"
-gender: "f"
+gender: "female"
 overview: "Karla is passionate, smart, humble, and engaged. She grew up in West Baltimore and is now getting her Masters and working with local advocacy groups to increase opportunity and better her community."
 quotes:
   - "Opportunity is a mindset"
