--- a/_data/personas/karla.yml
+++ b/_data/personas/karla.yml
@@ -6,10 +6,10 @@ quotes:
   - "I may not have been proud of my house and been on food stamps but my parents took culture, literature, and history seriously, and those are the types of things that influence you knowing what you have access to and don’t have access to in life"
 needs:
   - "To be able to advocate for her community in a way that allows her to personally flourish instead of sacrifice"
-  - "For products and services to not simply challenge or a irm her expectations/assumptions but take her beyond that moment and provide clearer actions"
+  - "For products and services to not simply challenge or affirm her expectations but take her beyond that moment and provide clearer actions"
 actions:
-  - "To find out how she can best advocate for her community other than self-sacrifice"
-  - "Be able to compare cities’ indicators of opportunity to show if policies intended to help opportunity are doing so"
+  - "To find out how she can best advocate for her community outside of self-sacrifice"
+  - "Be able to compare cities’ indicators of opportunity and show if policies intended to help opportunity are doing so"
 goals:
   - "Finding her identity, fulfillment, and role in her community through her continued advocacy work"
   - "Reframing ‘poverty reduction’ to ‘wealth development’ at the community level"
