--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   A collection of resources for developers of tools related to opportunity
   mobility.
 baseurl: "" # the subpath of your site, e.g. /blog
+email: "opportunity-data@listserv.gsa.gov"
 url: "https://ood.pif.gov" # the base hostname & protocol for your site
 repo_url: https://github.com/presidential-innovation-fellows/open-opportunity-data
 
