Add descriptions to scenarios

--- a/_data/scenarios/james.yml
+++ b/_data/scenarios/james.yml
@@ -1,4 +1,6 @@
 name: "James"
+short_desc: "Neighborhood leader"
+long_desc: "Neighborhood leader needing data for effective advocacy and planning"
 paragraphs:
   - "James is a semi-retired real estate agent who lives in the Fairmont Park neighborhood. The park is located on a major thoroughfare, with a busy bus transfer point along one side. This summer the bus stop was plagued by night-time armed robberies committed by teenagers, and now everyone is on edge. Some people say that the broken streetlights surrounding the park are partially to blame."
   - "The park takes up a full city block has no amenities, except a small corner with aging play equipment made out of metal too hot for kids to play on in the summertime. There are nice playgrounds at nearby private schools, but those aren’t open to the community. James has talked to the City’s Parks & Rec department, and they don’t have funds to install new playgrounds. They barely have enough resources, they said, to keep the grass mowed."
