--- a/_data/scenarios/tanya.yml
+++ b/_data/scenarios/tanya.yml
@@ -1,4 +1,6 @@
 name: "Tanya"
+short_desc: "Section 8 voucher holder"
+long_desc: "Section 8 voucher holder/low-income renter searching for housing"
 paragraphs:
   - "Tanya is a 25-year-old mother of 6-year-old and 4-year-old boys. She just received a Section 8 voucher after 2 years on the waiting list.  She’s been living in several different places over the last few years.  After she turned 18 and had a baby, she wanted a household of her own and rented a unit in a building where her cousin had a place, but lost her job when she her childcare became unreliable (her boyfriend’s mom couldn’t help as much as she had promised), then lived with her sister and then in public housing.  Her voucher means to her that she’ll be able to have a nicer place of her own with her kids.  She wants them to live in a safer building where they can have quiet after school to do their homework as they get older.  She doesn’t like the crime in the neighborhood where she is now, but she can keep her sons inside and there is at least someone she knows in the area to watch them when she really needs it."
   - "Tanya works and takes care of her kids on her own so she doesn’t have a lot of time to look for a place.  She doesn’t have a car and gets around mostly on the bus or by walking.  Since last year, her youngest has been with an older neighbor during the day who runs a daycare from her home."
