Show full scenario descriptions
But move into scenario bodies on mobile

--- a/_data/scenarios/barb.yml
+++ b/_data/scenarios/barb.yml
@@ -1,6 +1,5 @@
 name: "Barb"
-short_desc: "Neighborhood leader"
-long_desc: "Neighborhood leader needing data for effective advocacy and planning"
+description: "Neighborhood leader needing data for effective advocacy and planning"
 paragraphs:
   - "Barb is the Vice President of Riverside Neighborhood Association. Barb’s neighborhood is isolated by rail road tracks and light-industrial business, dotted with empty warehouses. It feels like she’s been fighting for her neighborhood’s survival for years now. Whether proposed high rise apartments that would hamper access to the riverfront, or the opening of yet another bar or liquor store, her neighborhood association seems to always be reacting to something."
   - "Barb has a job as an administrative assistant working for the state in the neighboring county.  She feels lucky to have her old car. If traffic is good, it’s a 30 minute drive to her office. But, when the transmission went out last month, she relied on public transportation -- a nearly two-hour bus ride with a transfer at the county line. On her breaks at work, she conducts internet research for the neighborhood association, and she considers neighborhood advocacy to be her “real work.”"
