Add Civil Rights Data Collection to Ed

--- a/_data/data-providers/federal.yml
+++ b/_data/data-providers/federal.yml
@@ -92,3 +92,7 @@ datasets:
   - curator: "ED"
     description: "ED Data Inventory"
     url: "http://datainventory.ed.gov/InventoryList"
+
+  - curator: "ED"
+    description: "Civil Rights Data Collection"
+    url: "http://ocrdata.ed.gov/"
